GC Dental/src/objects/Demo_Product_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Demo_Product__c</fullName>
        <label>Demo Product</label>
        <referenceTo>Demo_Product__c</referenceTo>
        <relationshipLabel>Demo Product Line Items</relationshipLabel>
        <relationshipName>Demo_Product_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Distributed_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Distributed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product__r.Product_Family__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Demo Product Line Items</relationshipLabel>
        <relationshipName>Demo_Product_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_in__c</fullName>
        <label>Quantity in</label>
        <picklist>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <formula>Quantity__c - Distributed_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <label>UniqueName</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Demo Product Line Item</label>
    <nameField>
        <label>Demo Product Line Item No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Product Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>